--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,13 +4,58 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f3f3f3;
 }
 
 a {
-  color: inherit;
+  color: #50b4bd;
   text-decoration: none;
+}
+a:hover {
+  color: #50b4bd;
+}
+a:active {
+  color: #50b4bd;
+}
+a:visited {
+  color: #50b4bd;
+}
+
+h1 a,
+h1 a:visited,
+h2 a,
+h2 a:visited,
+h3 a,
+h3 a:visited,
+h4 a,
+h4 a:visited,
+h5 a,
+h5 a:visited,
+h6 a,
+h6 a:visited {
+  color: #50b4bd;
 }
 
 * {
   box-sizing: border-box;
+}
+h1 {
+  color: #ee6951;
+  font-size: 26px;
+  font-weight: lighter;
+  text-transform: uppercase;
+}
+
+table.menu th.menu-item a {
+  color: #ee6951;
+  text-decoration: none;
+}
+table.menu th.menu-item a:hover {
+  color: #ee6951;
+}
+table.menu th.menu-item a:active {
+  color: #ee6951;
+}
+table.menu th.menu-item a:visited {
+  color: #ee6951;
 }
